# rag-support-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
data/knowledge_base/: 01_about.md  01_o-kompanii.md  02_dostavka.md  02_shipping.md  03_oplata.md  03_payment.md  04_returns.md  04_vozvrat-i-obmen.md  05_garantiya.md  05_warranty.md  06_aktsii-i-skidki.md  06_promotions.md  07_bonusnaya-programma.md  07_rewards.md  08_contact.md  08_kontakty.md  09_faq.md  10_catalog.md  10_katalog.md
docs/: demo-script.md  demo-transcript.md  interview-prep.md  portfolio-case.md  resume-summary.md  retrieval-calibration.md
docs/design/: router-redesign.md
docs/superpowers/plans/: 2026-06-16-rag-tg-assistant.md
docs/superpowers/specs/: 2026-06-16-rag-tg-assistant-design.md
eval/: case_results.md  results.md  routing_set.yaml  run_eval.py  test_set.yaml
rag_bot/: answer.py  bot.py  config.py  embeddings.py  ingestion.py  retrieval.py  router.py
tests/: test_answer.py  test_answer_integration.py  test_answer_unit.py  test_bot.py  test_config.py  test_embeddings.py  test_eval.py  test_ingestion.py  test_relevance.py  test_retrieval.py  test_router.py  test_router_routing_set.py
