[project]
name = "rag-support-bot"
version = "0.1.0"
description = "RAG-powered Telegram support assistant with citations, guardrails and eval"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",              # OpenAI-compatible client used with Gemini
    "chromadb>=0.5",             # local vector database for knowledge-base chunks
    "numpy>=1.26",               # cosine math in the semantic router
    "sentence-transformers>=3.0", # multilingual local embeddings
    "aiogram>=3.13",             # Telegram bot framework
    "python-dotenv>=1.0",        # environment variable loading from .env
    "pyyaml>=6.0",               # eval test-set parser
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
