[project]
name = "rag-support-bot"
version = "0.1.0"
description = "RAG-powered Telegram support assistant with citations, guardrails and eval"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",              # OpenAI-compatible client used with Gemini
    "chromadb>=0.5",             # local vector database for knowledge-base chunks
    "numpy>=1.26",               # cosine math in the semantic router
    "sentence-transformers>=3.0", # multilingual local embeddings
    "aiogram>=3.13",             # Telegram bot framework
    "python-dotenv>=1.0",        # environment variable loading from .env
    "pyyaml>=6.0",               # eval test-set parser
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = ["live: hits a real LLM provider; requires a key, excluded from default runs"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["rag_bot"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "openai.*", "dotenv.*", "aiogram.*", "yaml.*"]
ignore_missing_imports = true
