[project]
name = "rag-support-bot"
version = "1.0.0"
description = "RAG-powered Telegram support assistant with citations, guardrails and eval"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",              # OpenAI-compatible client used with Gemini
    "chromadb>=0.5",             # local vector database for knowledge-base chunks
    "numpy>=1.26",               # cosine math in the semantic router
    "sentence-transformers>=3.0", # multilingual local embeddings
    "aiogram>=3.30.0",           # Telegram bot framework (floor skips the yanked 3.29.0)
    "python-dotenv>=1.0",        # environment variable loading from .env
    "pyyaml>=6.0",               # eval test-set parser
    "torch>=2.12",               # direct dep so [tool.uv.sources] can route it to the CPU index on Linux
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.uv]
package = false

[tool.uv.sources]
# sentence-transformers pulls torch transitively; PyPI's Linux torch wheels
# bundle ~6GB of CUDA runtime libraries this CPU-inference bot never uses.
# Route Linux only to the official CPU-only build; macOS/Windows (CI + local
# dev) keep resolving from PyPI, whose wheels are already CPU-sized.
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = ["live: hits a real LLM provider; requires a key, excluded from default runs"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["rag_bot"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "openai.*", "dotenv.*", "aiogram.*", "yaml.*"]
ignore_missing_imports = true
